--- a/pages/interior.html
+++ b/pages/interior.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styleP1.css">
+    <link rel="stylesheet" href="../css/styleP2.css">
     <script src="../js/jsP1.js"></script>
     <link rel="shortcut icon" href="../icons/planta.png" type="image/x-icon">
     <title>plantas para tu hogar</title>
 </head>
 <body>
-    <div>
+    <div class="grilla-general">
         <header>
             <div class="caja-iconos"> 
                 <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/whatsappP.png" alt=""></a> 
@@ -43,10 +43,78 @@
                 </div>
             <!--aca en responsive van las barras desplegables-->   
         </header>
+        <aside>
+            publicidad
+        </aside>
         <main>
+
+            <div class="card1P1 cardsP2">
+                <div class="caja-imgCard1 caja-imgCardsP2">
+                    <img class="imgCard1 imgCardsP2" src="../img/potus.png" alt="dato1">
+                </div>    
+                <div class="caja-textoCard1 caja-textoCardsP2">
+                    <p class="textoImg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam praesentium quisquam inventore nesciunt animi cumque placeat, voluptatem maiores unde architecto quos est itaque cupiditate at autem magni dolor nostrum eum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum harum deserunt adipisci nam consequatur ea, porro laboriosam cumque tenetur totam explicabo incidunt, suscipit qui soluta esse laudantium asperiores aliquam corrupti.</p>
+                </div>    
+            </div>
+
+            <div class="card2P1 cardsP2">
+                <div class="caja-imgCard2 caja-imgCardsP2">
+                    <img class="imgCard2 imgCardsP2" src="../img/pataDeElefante.png" alt="dato2">
+                </div>
+                <div class="caja-textoCard2 caja-textoCardsP2">  
+                    <p class="textoImg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatibus nobis cum iusto illo dignissimos minima aut minus iure autem eaque corrupti facilis, odit, expedita repellendus deserunt exercitationem recusandae corporis?</p>
+                </div>
+            </div>
+
+            <div class="card3P1 cardsP2">
+                <div class="caja-imgCard3 caja-imgCardsP2">
+                    <img class="imgCard3 imgCardsP2" src="../img/marantaLeuconeura.png" alt="dato3">
+                </div>
+                <div class="caja-textoCard3 caja-textoCardsP2"> 
+                    <p class="textoImg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio explicabo quod sapiente ullam quas aliquam laudantium consequuntur repellendus reiciendis itaque enim reprehenderit laborum eos dolorum, nobis, debitis, aut aperiam et.</p>
+                </div>
+            </div>
+
+            <div class="card4P1 cardsP2">
+                <div class="caja-imgCard4 caja-imgCardsP2">
+                    <img class="imgCard4 imgCardsP2" src="../img/helecho.png" alt="dato4">
+                </div>
+                <div class="caja-textoCard4 caja-textoCardsP2">    
+                    <p class="textoImg">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dolorem ratione incidunt, repudiandae rem labore quia qui rerum tempora, veritatis eaque recusandae esse, nam repellendus expedita? Nihil at quibusdam impedit.</p>
+                </div>    
+            </div>
+
+            <div class="card5P1 cardsP2">
+                <div class="caja-imgCard5 caja-imgCardsP2">
+                    <img class="imgCard5 imgCardsP2" src="../img/ficusLyrata.png" alt="dato1">
+                </div>    
+                <div class="caja-textoCard5 caja-textoCardsP2">
+                    <p class="textoImg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam praesentium quisquam inventore nesciunt animi cumque placeat, voluptatem maiores unde architecto quos est itaque cupiditate at autem magni dolor nostrum eum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum harum deserunt adipisci nam consequatur ea, porro laboriosam cumque tenetur totam explicabo incidunt, suscipit qui soluta esse laudantium asperiores aliquam corrupti.</p>
+                </div>    
+            </div>
+
+            <div class="card6P1 cardsP2">
+                <div class="caja-imgCard6 caja-imgCardsP2">
+                    <img class="imgCard6 imgCardsP2" src="../img/croton.png" alt="dato2">
+                </div>
+                <div class="caja-textoCard6 caja-textoCardsP2">  
+                    <p class="textoImg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatibus nobis cum iusto illo dignissimos minima aut minus iure autem eaque corrupti facilis, odit, expedita repellendus deserunt exercitationem recusandae corporis?</p>
+                </div>
+            </div>
+
+            <div class="card7P1 cardsP2">
+                <div class="caja-imgCard7 caja-imgCardsP2">
+                    <img class="imgCard3 imgCardsP2" src="../img/collarDeCorazones.png" alt="dato3">
+                </div>
+                <div class="caja-textoCard7 caja-textoCardsP2"> 
+                    <p class="textoImg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio explicabo quod sapiente ullam quas aliquam laudantium consequuntur repellendus reiciendis itaque enim reprehenderit laborum eos dolorum, nobis, debitis, aut aperiam et.</p>
+                </div>
+            </div>
 
         </main>
         <footer>
             <p>footer</p>
         </footer>
         </div>
+</body>
+</html>
