--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                         <li><a href="./index.html">inicio</a></li>
                         <li><a href="./pages/interior.html">interior</a></li>
                         <li><a href="./pages/exterior.html">exterior</a></li>
+                        <li><a href="./pages/medicinales.html">pagina</a></li>
                         <li><a href="./pages/asesoramiento.html">asesoramiento</a></li>
-                        <li><a href="./pages/quinto.html">pagina</a></li>
                     </ul>
                 </div>
             <!--aca en responsive van las barras desplegables-->   
