--- a/pages/exterior.html
+++ b/pages/exterior.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styleP1.css">
+    <link rel="stylesheet" href="../css/styleP3.css">
     <script src=".//js/jsP1.js"></script>
     <link rel="shortcut icon" href="../icons/planta.png" type="image/x-icon">
     <title>plantas para tu hogar</title>
 </head>
 <body>
-    <div>
+    <div class="grilla-general">
         <header>
             <div class="caja-iconos"> 
                 <a href="https://www.netflix.com/browse" target="_blank"><img class="icono" src="../icons/whatsappP.png" alt=""></a> 
@@ -37,16 +37,87 @@
                         <li><a href="../index.html">inicio</a></li>
                         <li><a href="../pages/interior.html">interior</a></li>
                         <li><a href="../pages/exterior.html">exterior</a></li>
+                        <li><a href="../pages/medicinales.html">pagina</a></li>
                         <li><a href="../pages/asesoramiento.html">asesoramiento</a></li>
-                        <li><a href="../pages/quinto.html">pagina</a></li>
                     </ul>
                 </div>
             <!--aca en responsive van las barras desplegables-->   
         </header>
+        <aside>
+            publicidad
+        </aside>
         <main>
+
+            <div class="card1P1 cardsP3">
+                <div class="caja-imgCard1 caja-imgCardsP3">
+                    <img class="imgCard1 imgCardsP3" src="../img/potus.png" alt="dato1">
+                </div> 
+                <div class="caja-textoCard1 caja-textoCardsP3">
+                    <p class="textoImg">potus</p>
+                </div>    
+            </div>
+            <div class="aa">  
+                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+            </div> 
+
+            <div class="card2P1 cardsP3">
+                <div class="caja-imgCard2 caja-imgCardsP3">
+                    <img class="imgCard2 imgCardsP3" src="../img/pataDeElefante.png" alt="dato2">
+                </div>
+                <div class="caja-textoCard2 caja-textoCardsP3">  
+                    <p class="textoImg">pata de elefante</p>
+                </div>
+            </div>
+
+            <div class="card3P1 cardsP3">
+                <div class="caja-imgCard3 caja-imgCardsP3">
+                    <img class="imgCard3 imgCardsP3" src="../img/marantaLeuconeura.png" alt="dato3">
+                </div>
+                <div class="caja-textoCard3 caja-textoCardsP3"> 
+                    <p class="textoImg">kjhjghfdfgh.</p>
+                </div>
+            </div>
+
+            <div class="card4P1 cardsP3">
+                <div class="caja-imgCard4 caja-imgCardsP3">
+                    <img class="imgCard4 imgCardsP3" src="../img/helecho.png" alt="dato4">
+                </div>
+                <div class="caja-textoCard4 caja-textoCardsP3">    
+                    <p class="textoImg">helecho</p>
+                </div>    
+            </div>
+
+            <div class="card5P1 cardsP3">
+                <div class="caja-imgCard5 caja-imgCardsP3">
+                    <img class="imgCard5 imgCardsP3" src="../img/ficusLyrata.png" alt="dato1">
+                </div>    
+                <div class="caja-textoCard5 caja-textoCardsP3">
+                    <p class="textoImg">ficus lyrata</p>
+                </div>    
+            </div>
+
+            <div class="card6P1 cardsP3">
+                <div class="caja-imgCard6 caja-imgCardsP3">
+                    <img class="imgCard6 imgCardsP3" src="../img/croton.png" alt="dato2">
+                </div>
+                <div class="caja-textoCard6 caja-textoCardsP3">  
+                    <p class="textoImg">croton</p>
+                </div>
+            </div>
+
+            <div class="card7P1 cardsP3">
+                <div class="caja-imgCard7 caja-imgCardsP3">
+                    <img class="imgCard3 imgCardsP3" src="../img/collarDeCorazones.png" alt="dato3">
+                </div>
+                <div class="caja-textoCard7 caja-textoCardsP3"> 
+                    <p class="textoImg">collar de corazones</p>
+                </div>
+            </div>
 
         </main>
         <footer>
             <p>footer</p>
         </footer>
         </div>
+    </body>
+</html>
