--- a/pages/asesoramiento.html
+++ b/pages/asesoramiento.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styleP4.css">
+    <link rel="stylesheet" href="../css/styleP5.css">
     <script src=".//js/jsP1.js"></script>
     <link rel="shortcut icon" href="../icons/planta.png" type="image/x-icon">
     <title>plantas para tu hogar</title>
@@ -37,8 +37,9 @@
                         <li><a href="../index.html">inicio</a></li>
                         <li><a href="../pages/interior.html">interior</a></li>
                         <li><a href="../pages/exterior.html">exterior</a></li>
+                        <li><a href="../pages/medicinales.html">pagina</a></li>
                         <li><a href="../pages/asesoramiento.html">asesoramiento</a></li>
-                        <li><a href="../pages/quinto.html">pagina</a></li>
+                        
                     </ul>
                 </div>
             <!--aca en responsive van las barras desplegables-->   
