--- a/pages/interior.html
+++ b/pages/interior.html
@@ -37,8 +37,8 @@
                         <li><a href="../index.html">inicio</a></li>
                         <li><a href="../pages/interior.html">interior</a></li>
                         <li><a href="../pages/exterior.html">exterior</a></li>
+                        <li><a href="../pages/medicinales.html">pagina</a></li>
                         <li><a href="../pages/asesoramiento.html">asesoramiento</a></li>
-                        <li><a href="../pages/quinto.html">pagina</a></li>
                     </ul>
                 </div>
             <!--aca en responsive van las barras desplegables-->   
@@ -53,63 +53,96 @@
                     <img class="imgCard1 imgCardsP2" src="../img/potus.png" alt="dato1">
                 </div>    
                 <div class="caja-textoCard1 caja-textoCardsP2">
-                    <p class="textoImg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam praesentium quisquam inventore nesciunt animi cumque placeat, voluptatem maiores unde architecto quos est itaque cupiditate at autem magni dolor nostrum eum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum harum deserunt adipisci nam consequatur ea, porro laboriosam cumque tenetur totam explicabo incidunt, suscipit qui soluta esse laudantium asperiores aliquam corrupti.</p>
-                </div>    
+                    <p class="textoImg">potus</p>
+                </div>   
             </div>
+            <div class="aa">  
+                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+            </div> 
+
+
 
             <div class="card2P1 cardsP2">
                 <div class="caja-imgCard2 caja-imgCardsP2">
                     <img class="imgCard2 imgCardsP2" src="../img/pataDeElefante.png" alt="dato2">
                 </div>
                 <div class="caja-textoCard2 caja-textoCardsP2">  
-                    <p class="textoImg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatibus nobis cum iusto illo dignissimos minima aut minus iure autem eaque corrupti facilis, odit, expedita repellendus deserunt exercitationem recusandae corporis?</p>
+                    <p class="textoImg">pata de elefante</p>
                 </div>
             </div>
+            <div class="aa">  
+                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+            </div> 
+
+
 
             <div class="card3P1 cardsP2">
                 <div class="caja-imgCard3 caja-imgCardsP2">
                     <img class="imgCard3 imgCardsP2" src="../img/marantaLeuconeura.png" alt="dato3">
                 </div>
                 <div class="caja-textoCard3 caja-textoCardsP2"> 
-                    <p class="textoImg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio explicabo quod sapiente ullam quas aliquam laudantium consequuntur repellendus reiciendis itaque enim reprehenderit laborum eos dolorum, nobis, debitis, aut aperiam et.</p>
+                    <p class="textoImg">kjhjghfdfgh.</p>
                 </div>
             </div>
+            <div class="aa">  
+                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+            </div> 
+
+
 
             <div class="card4P1 cardsP2">
                 <div class="caja-imgCard4 caja-imgCardsP2">
                     <img class="imgCard4 imgCardsP2" src="../img/helecho.png" alt="dato4">
                 </div>
                 <div class="caja-textoCard4 caja-textoCardsP2">    
-                    <p class="textoImg">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati dolorem ratione incidunt, repudiandae rem labore quia qui rerum tempora, veritatis eaque recusandae esse, nam repellendus expedita? Nihil at quibusdam impedit.</p>
+                    <p class="textoImg">helecho</p>
                 </div>    
             </div>
+            <div class="aa">  
+                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+            </div> 
+
+
 
             <div class="card5P1 cardsP2">
                 <div class="caja-imgCard5 caja-imgCardsP2">
                     <img class="imgCard5 imgCardsP2" src="../img/ficusLyrata.png" alt="dato1">
                 </div>    
                 <div class="caja-textoCard5 caja-textoCardsP2">
-                    <p class="textoImg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam praesentium quisquam inventore nesciunt animi cumque placeat, voluptatem maiores unde architecto quos est itaque cupiditate at autem magni dolor nostrum eum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum harum deserunt adipisci nam consequatur ea, porro laboriosam cumque tenetur totam explicabo incidunt, suscipit qui soluta esse laudantium asperiores aliquam corrupti.</p>
+                    <p class="textoImg">ficus lyrata</p>
                 </div>    
             </div>
+            <div class="aa">  
+                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+            </div> 
+
+
 
             <div class="card6P1 cardsP2">
                 <div class="caja-imgCard6 caja-imgCardsP2">
                     <img class="imgCard6 imgCardsP2" src="../img/croton.png" alt="dato2">
                 </div>
                 <div class="caja-textoCard6 caja-textoCardsP2">  
-                    <p class="textoImg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea voluptatibus nobis cum iusto illo dignissimos minima aut minus iure autem eaque corrupti facilis, odit, expedita repellendus deserunt exercitationem recusandae corporis?</p>
+                    <p class="textoImg">croton</p>
                 </div>
             </div>
+            <div class="aa">  
+                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+            </div> 
+
+
 
             <div class="card7P1 cardsP2">
                 <div class="caja-imgCard7 caja-imgCardsP2">
                     <img class="imgCard3 imgCardsP2" src="../img/collarDeCorazones.png" alt="dato3">
                 </div>
                 <div class="caja-textoCard7 caja-textoCardsP2"> 
-                    <p class="textoImg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio explicabo quod sapiente ullam quas aliquam laudantium consequuntur repellendus reiciendis itaque enim reprehenderit laborum eos dolorum, nobis, debitis, aut aperiam et.</p>
+                    <p class="textoImg">collar de corazones</p>
                 </div>
             </div>
+            <div class="aa">  
+                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+            </div> 
 
         </main>
         <footer>
