--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
-    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styleP1.css">
-    <script src="./js/jsP1.js"></script>
     <link rel="shortcut icon" href="./icons/planta.png" type="image/x-icon">
     <title>plantas para tu hogar</title>
 </head>
@@ -37,7 +35,7 @@
                         <li><a href="./index.html">inicio</a></li>
                         <li><a href="./pages/interior.html">interior</a></li>
                         <li><a href="./pages/exterior.html">exterior</a></li>
-                        <li><a href="./pages/medicinales.html">pagina</a></li>
+                        <li><a href="./pages/medicinales.html">aromaticas</a></li>
                         <li><a href="./pages/asesoramiento.html">asesoramiento</a></li>
                     </ul>
                 </div>
