--- a/pages/interior.html
+++ b/pages/interior.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
-    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styleP2.css">
-    <script src="../js/jsP1.js"></script>
     <link rel="shortcut icon" href="../icons/planta.png" type="image/x-icon">
     <title>plantas para tu hogar</title>
 </head>
@@ -37,7 +35,7 @@
                         <li><a href="../index.html">inicio</a></li>
                         <li><a href="../pages/interior.html">interior</a></li>
                         <li><a href="../pages/exterior.html">exterior</a></li>
-                        <li><a href="../pages/medicinales.html">pagina</a></li>
+                        <li><a href="../pages/medicinales.html">aromaticas</a></li>
                         <li><a href="../pages/asesoramiento.html">asesoramiento</a></li>
                     </ul>
                 </div>
@@ -50,7 +48,7 @@
 
             <div class="card1P1 cardsP2">
                 <div class="caja-imgCard1 caja-imgCardsP2">
-                    <img class="imgCard1 imgCardsP2" src="../img/potus.png" alt="dato1">
+                    <img class="imgCard1 imgCardsP2" src="../img/potus.png" alt="planta potus">
                 </div>    
                 <div class="caja-textoCard1 caja-textoCardsP2">
                     <p class="textoImg">potus</p>
@@ -64,7 +62,7 @@
 
             <div class="card2P1 cardsP2">
                 <div class="caja-imgCard2 caja-imgCardsP2">
-                    <img class="imgCard2 imgCardsP2" src="../img/pataDeElefante.png" alt="dato2">
+                    <img class="imgCard2 imgCardsP2" src="../img/pataDeElefante.png" alt="planta pata de elefante">
                 </div>
                 <div class="caja-textoCard2 caja-textoCardsP2">  
                     <p class="textoImg">pata de elefante</p>
@@ -78,7 +76,7 @@
 
             <div class="card3P1 cardsP2">
                 <div class="caja-imgCard3 caja-imgCardsP2">
-                    <img class="imgCard3 imgCardsP2" src="../img/marantaLeuconeura.png" alt="dato3">
+                    <img class="imgCard3 imgCardsP2" src="../img/marantaLeuconeura.png" alt="planta maranta leuconeura">
                 </div>
                 <div class="caja-textoCard3 caja-textoCardsP2"> 
                     <p class="textoImg">kjhjghfdfgh.</p>
@@ -92,7 +90,7 @@
 
             <div class="card4P1 cardsP2">
                 <div class="caja-imgCard4 caja-imgCardsP2">
-                    <img class="imgCard4 imgCardsP2" src="../img/helecho.png" alt="dato4">
+                    <img class="imgCard4 imgCardsP2" src="../img/helecho.png" alt="planta helecho">
                 </div>
                 <div class="caja-textoCard4 caja-textoCardsP2">    
                     <p class="textoImg">helecho</p>
@@ -106,7 +104,7 @@
 
             <div class="card5P1 cardsP2">
                 <div class="caja-imgCard5 caja-imgCardsP2">
-                    <img class="imgCard5 imgCardsP2" src="../img/ficusLyrata.png" alt="dato1">
+                    <img class="imgCard5 imgCardsP2" src="../img/ficusLyrata.png" alt="planta ficus lyrata">
                 </div>    
                 <div class="caja-textoCard5 caja-textoCardsP2">
                     <p class="textoImg">ficus lyrata</p>
@@ -120,7 +118,7 @@
 
             <div class="card6P1 cardsP2">
                 <div class="caja-imgCard6 caja-imgCardsP2">
-                    <img class="imgCard6 imgCardsP2" src="../img/croton.png" alt="dato2">
+                    <img class="imgCard6 imgCardsP2" src="../img/croton.png" alt="planta croton">
                 </div>
                 <div class="caja-textoCard6 caja-textoCardsP2">  
                     <p class="textoImg">croton</p>
@@ -134,7 +132,7 @@
 
             <div class="card7P1 cardsP2">
                 <div class="caja-imgCard7 caja-imgCardsP2">
-                    <img class="imgCard3 imgCardsP2" src="../img/collarDeCorazones.png" alt="dato3">
+                    <img class="imgCard3 imgCardsP2" src="../img/collarDeCorazones.png" alt="planta collar de corazones">
                 </div>
                 <div class="caja-textoCard7 caja-textoCardsP2"> 
                     <p class="textoImg">collar de corazones</p>
