actualizacion interior y exterior

--- a/pages/interior.html
+++ b/pages/interior.html
@@ -55,7 +55,7 @@
                 </div>   
             </div>
             <div class="aa">  
-                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+                <p class="a">Una casa sin un potus es impensable porque es agradecido, ágil y un superviviente. Como sus tallos caen y se arrastran, funciona bien en una cesta colgante o en una estantería alta para que pueda lucir su efecto cascada. Además, el potus también es conocido por su cualidad para purificar el aire y es muy longeva.</p>
             </div> 
 
 
@@ -69,21 +69,21 @@
                 </div>
             </div>
             <div class="aa">  
-                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+                <p class="a">Es una planta de interior muy alta. Puede llegar a medir un medio y medio en maceta, aunque e su hábitat natural puede alcanzar los 10 m. Se caracteriza por su grueso tronco, similar a una pata de elefante, de ahí su nombre. Es muy decorativa y sus cuidados son muy sencillos. Necesita grandes dosis de luz, pero no directa. Se recomienda un buen drenaje y comprobar la humedad de la tierra antes de regalarla.</p>
             </div> 
 
 
 
             <div class="card3P1 cardsP2">
                 <div class="caja-imgCard3 caja-imgCardsP2">
-                    <img class="imgCard3 imgCardsP2" src="../img/marantaLeuconeura.png" alt="planta maranta leuconeura">
+                    <img class="imgCard3 imgCardsP2" src="../img/marantaLeuconera.png" alt="planta maranta leuconeura">
                 </div>
                 <div class="caja-textoCard3 caja-textoCardsP2"> 
-                    <p class="textoImg">kjhjghfdfgh.</p>
+                    <p class="textoImg">maranta leuconera</p>
                 </div>
             </div>
             <div class="aa">  
-                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+                <p class="a">Es conocida también como Maranta tricolor y se la llama planta de la oración porque por las noches tiende a cerrar sus hojas ligeramente. Necesita mucha luz, pero indirecta para que muestre todos sus vibrantes colores, tanto de las hojas como de sus nervios. Necesita un sustrato turboso y le gusta la humedad ambiental, por lo que convendrá pulverizar sus hojas en verano. Coloca un plato con guijarros debajo de la maceta y tras los riegos elimina el agua sobrante.</p>
             </div> 
 
 
@@ -97,7 +97,7 @@
                 </div>    
             </div>
             <div class="aa">  
-                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+                <p class="a">Fácil de cuidar y muy decorativos, los helechos están de moda. Son muy resistentes y no requieren de mucho mantenimiento. Lo ideal es colocarlos en un lugar con semisombra ,sin sol directo,. Les gusta la humedad, aunque un riego excesivo puede provocar la pudrición de las raíces (verás también que las hojas se ponen amarillentas). Para proporcionársela colócala sobre un plato con guijarros y agua, de manera que se vea beneficiada por su evaporación. Pulverizarla también ayuda.</p>
             </div> 
 
 
@@ -111,21 +111,21 @@
                 </div>    
             </div>
             <div class="aa">  
-                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+                <p class="a">El ficus lyrata es una planta que añade mucha naturaleza a tu casa gracias a sus ramas grandes y arqueadas, y a sus hojas puntiagudas. Su forma de arbolito quedará perfecto al lado de un gran ventanal, al pie de una escalera, junto al sofá o en cualquier rincón que necesite un subidón de vida y alegría verde. Además, ¡son muy resistentes!</p>
             </div> 
 
 
 
             <div class="card6P1 cardsP2">
                 <div class="caja-imgCard6 caja-imgCardsP2">
-                    <img class="imgCard6 imgCardsP2" src="../img/croton.png" alt="planta croton">
+                    <img class="imgCard6 imgCardsP2" src="../img/cinta.png" alt="planta croton">
                 </div>
                 <div class="caja-textoCard6 caja-textoCardsP2">  
-                    <p class="textoImg">croton</p>
+                    <p class="textoImg">cinta</p>
                 </div>
             </div>
             <div class="aa">  
-                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+                <p class="a"></p>
             </div> 
 
 
@@ -139,13 +139,47 @@
                 </div>
             </div>
             <div class="aa">  
-                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
-            </div> 
+                <p class="a">Esta suculenta colgante es llamativa por sus carnosas hojas en forma de corazón y flores tubulares. Colócala en un espacio luminoso, pero protegida de los rayos de sol directo. Antes de regarla, comprueba la humedad del sustrato. En invierno, necesitará como máximo un par de riegos al mes.</p>
+            </div>
+
+
+
+            <div class="card7P1 cardsP2">
+                <div class="caja-imgCard7 caja-imgCardsP2">
+                    <img class="imgCard3 imgCardsP2" src="../img/anturio.png" alt="planta collar de corazones">
+                </div>
+                <div class="caja-textoCard7 caja-textoCardsP2"> 
+                    <p class="textoImg">anturio</p>
+                </div>
+            </div>
+            <div class="aa">  
+                <p class="a"></p>
+            </div>
+
+
+
+            <div class="card7P1 cardsP2">
+                <div class="caja-imgCard7 caja-imgCardsP2">
+                    <img class="imgCard3 imgCardsP2" src="../img/cactus.png" alt="planta collar de corazones">
+                </div>
+                <div class="caja-textoCard7 caja-textoCardsP2"> 
+                    <p class="textoImg">cactus</p>
+                </div>
+            </div>
+            <div class="aa">  
+                <p class="a"></p>
+            </div>
+
+
+
+            <div class="caja-botonP2y3"> <!-- falta javascript para activar esto -->
+                <input class="botonP2y3" type="button" value="ver mas">
+            </div>
 
         </main>
         <footer>
             <p>footer</p>
         </footer>
         </div>
-</body>
+    </body>
 </html>
