--- a/pages/exterior.html
+++ b/pages/exterior.html
@@ -48,68 +48,130 @@
 
             <div class="card1P1 cardsP3">
                 <div class="caja-imgCard1 caja-imgCardsP3">
-                    <img class="imgCard1 imgCardsP3" src="../img/potus.png" alt="dato1">
+                    <img class="imgCard1 imgCardsP3" src="../img/agave.png" alt="dato1">
                 </div> 
                 <div class="caja-textoCard1 caja-textoCardsP3">
-                    <p class="textoImg">potus</p>
+                    <p class="textoImg">agave</p>
                 </div>    
             </div>
             <div class="aa">  
-                <p class="a">jfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdknfkankansjnskncajdncjadncjjbsdkn</p>
+                <p class="a">Su nombre científico es Agave americana, aunque también se le llama Pita o Pitera. Es una crasa originaria de México, muy resistente a la sequía y a los suelos con escasez de nutrientes. Es muy valorada por su particular forma de roseta, tan característica de las agaváceas y llega a alcanzar alturas de hasta 2 metros. En suelo no necesita riego en absoluto, aunque en maceta sí requerirá de algunos ligeros.</p>
             </div> 
+
+
 
             <div class="card2P1 cardsP3">
                 <div class="caja-imgCard2 caja-imgCardsP3">
-                    <img class="imgCard2 imgCardsP3" src="../img/pataDeElefante.png" alt="dato2">
+                    <img class="imgCard2 imgCardsP3" src="../img/clematis.png" alt="dato2">
                 </div>
                 <div class="caja-textoCard2 caja-textoCardsP3">  
-                    <p class="textoImg">pata de elefante</p>
+                    <p class="textoImg">clematis</p>
                 </div>
             </div>
+            <div class="aa">  
+                <p class="a">También llamada clemátide, se trata en realidad de todo un género de plantas trepadoras de gran velocidad de crecimiento. Cuenta con una gran cantidad de especies y cultivares y se encuentra de forma natural en casi cualquier región templada del mundo. En el jardín, resiste muy bien los cambios de temperatura y apenas necesita cuidados, siendo la única excepción el hecho de que necesita un considerable nivel de humedad.</p>
+            </div>
+
+
 
             <div class="card3P1 cardsP3">
                 <div class="caja-imgCard3 caja-imgCardsP3">
-                    <img class="imgCard3 imgCardsP3" src="../img/marantaLeuconeura.png" alt="dato3">
+                    <img class="imgCard3 imgCardsP3" src="../img/crisantemo.png" alt="dato3">
                 </div>
                 <div class="caja-textoCard3 caja-textoCardsP3"> 
-                    <p class="textoImg">kjhjghfdfgh.</p>
+                    <p class="textoImg">crisantemo</p>
                 </div>
             </div>
+            <div class="aa">  
+                <p class="a">Estas preciosas flores originarias de China y popularizadas en Japón son una gran forma de embellecer tu jardín a cambio de muy poco trabajo, especialmente en climas fríos o frescos, aunque no extremos. Lo único que necesitan es abundante luz indirecta para que sus flores se abran, siendo muy vistosas y fragantes. Los crisantemos alcanzan alturas de hasta metro y medio.</p>
+            </div>
+
+
 
             <div class="card4P1 cardsP3">
                 <div class="caja-imgCard4 caja-imgCardsP3">
-                    <img class="imgCard4 imgCardsP3" src="../img/helecho.png" alt="dato4">
+                    <img class="imgCard4 imgCardsP3" src="../img/hiedra.png" alt="dato4">
                 </div>
                 <div class="caja-textoCard4 caja-textoCardsP3">    
-                    <p class="textoImg">helecho</p>
+                    <p class="textoImg">hiedra</p>
                 </div>    
             </div>
+            <div class="aa">  
+                <p class="a">El género Hedera cuenta con 15 especies, siendo la más conocida de ellas la hiedra común o Hedera helix. Se trata de una de las más conocidas plantas trepadoras y también de las más usadas en cobertura de muros y fachadas. Sus únicos cuidados destacables son que algunas de sus especies crecen tanto que es necesario controlarlas y que no tolera bien el sol directo.</p>
+            </div>
+
+
 
             <div class="card5P1 cardsP3">
                 <div class="caja-imgCard5 caja-imgCardsP3">
-                    <img class="imgCard5 imgCardsP3" src="../img/ficusLyrata.png" alt="dato1">
+                    <img class="imgCard5 imgCardsP3" src="../img/jazmin.png" alt="dato1">
                 </div>    
                 <div class="caja-textoCard5 caja-textoCardsP3">
-                    <p class="textoImg">ficus lyrata</p>
+                    <p class="textoImg">jazmin</p>
                 </div>    
             </div>
+            <div class="aa">  
+                <p class="a">El género Jasminum cuenta con unas 200 especies, todas ellas provenientes de zonas tropicales y subtropicales y son unas de las mejores plantas de exterior fáciles de cuidar. Se trata de plantas trepadoras y arbustos de exterior, con unas flores blancas tan decorativas como fragantes. No es nada exquisito con sus cuidados, siendo su único requisito importante que requiere de abundante luz.</p>
+            </div>
+
+
 
             <div class="card6P1 cardsP3">
                 <div class="caja-imgCard6 caja-imgCardsP3">
-                    <img class="imgCard6 imgCardsP3" src="../img/croton.png" alt="dato2">
+                    <img class="imgCard6 imgCardsP3" src="../img/lavanda.png" alt="dato2">
                 </div>
                 <div class="caja-textoCard6 caja-textoCardsP3">  
-                    <p class="textoImg">croton</p>
+                    <p class="textoImg">lavanda</p>
                 </div>
             </div>
+            <div class="aa">  
+                <p class="a">Una de las plantas aromáticas más populares y apreciadas es la lavanda. Su éxito se debe a sus bonitas espigas florales, de tonos lilas y violetas que pueden verse durante todo el año, y al fresco y agradable aroma de estas, que se usa en todo tipo de productos. Es excepcionalmente resistente, tolerando bien tanto el frío como el calor, y solo necesita una buena cantidad de luz y riegos moderados.</p>
+            </div>
+
+
 
             <div class="card7P1 cardsP3">
                 <div class="caja-imgCard7 caja-imgCardsP3">
-                    <img class="imgCard3 imgCardsP3" src="../img/collarDeCorazones.png" alt="dato3">
+                    <img class="imgCard7 imgCardsP3" src="../img/margarita.png" alt="dato3">
                 </div>
                 <div class="caja-textoCard7 caja-textoCardsP3"> 
-                    <p class="textoImg">collar de corazones</p>
+                    <p class="textoImg">margarita</p>
                 </div>
+            </div>
+            <div class="aa">  
+                <p class="a">Las margaritas son especialmente resistentes cuando buscamos plantas de exterior resistentes al sol. En climas cálidos, estas flores arquetípicas y tan conocidas en todo el mundo no necesitarán apenas de ningún cuidado, siendo necesario solo regarlas de forma moderada en los meses cálidos, ya que en invierno será suficiente con lluvias o riegos esporádicos.</p>
+            </div>
+
+
+
+            <div class="card8P1 cardsP3">
+                <div class="caja-imgCard8 caja-imgCardsP3">
+                    <img class="imgCard8 imgCardsP3" src="../img/palmito.png" alt="dato3">
+                </div>
+                <div class="caja-textoCard8 caja-textoCardsP3"> 
+                    <p class="textoImg">palmito</p>
+                </div>
+            </div>
+            <div class="aa">  
+                <p class="a">Su nombre científico es Chamaerops humilis y se trata de la única palmera silvestre que existe con origen en Europa. Es una planta muy tupida, de porte bajo y con un sistema radicular de gran desarrollo. Es bastante resistente y su altura no supera habitualmente los 3 o 4 metros. Su debilidad son las heladas, que no tolera. Es una de las plantas de exterior que necesitan poca agua más fáciles de cuidar.</p>
+            </div>
+
+
+
+            <div class="card9P1 cardsP3">
+                <div class="caja-imgCard9 caja-imgCardsP3">
+                    <img class="imgCard9 imgCardsP3" src="../img/rosal.png" alt="dato3">
+                </div>
+                <div class="caja-textoCard9 caja-textoCardsP3"> 
+                    <p class="textoImg">rosal</p>
+                </div>
+            </div>
+            <div class="aa">  
+                <p class="a">Los rosales son arbustos de la familia de las rosáceas, conocidos por sus preciosas y fragantes flores, populares en todo el mundo, y por sus espinas. A pesar de su popularidad, son arbustos de fácil cultivo, que solo necesitan abundante luz natural y un riego abundante durante sus meses de floración, especialmente si queremos ver rosas grandes y bonitas. Son muy adecuados para climas calurosos.</p>
+            </div>
+
+            <div class="caja-botonP2y3"> <!-- falta javascript para activar esto -->
+                <input class="botonP2y3" type="button" value="ver mas">
             </div>
 
         </main>
