--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <li><a href="./index.html">inicio</a></li>
                         <li><a href="./pages/interior.html">interior</a></li>
                         <li><a href="./pages/exterior.html">exterior</a></li>
-                        <li><a href="./pages/medicinales.html">aromaticas</a></li>
+                        <li><a href="./pages/aromaticas.html">aromaticas</a></li>
                         <li><a href="./pages/asesoramiento.html">asesoramiento</a></li>
                     </ul>
                 </div>
