--- a/pages/exterior.html
+++ b/pages/exterior.html
@@ -35,7 +35,7 @@
                         <li><a href="../index.html">inicio</a></li>
                         <li><a href="../pages/interior.html">interior</a></li>
                         <li><a href="../pages/exterior.html">exterior</a></li>
-                        <li><a href="../pages/medicinales.html">aromaticas</a></li>
+                        <li><a href="../pages/aromaticas.html">aromaticas</a></li>
                         <li><a href="../pages/asesoramiento.html">asesoramiento</a></li>
                     </ul>
                 </div>
@@ -46,7 +46,7 @@
         </aside>
         <main>
 
-            <div class="card1P1 cardsP3">
+            <div class="card1P3 cardsP3">
                 <div class="caja-imgCard1 caja-imgCardsP3">
                     <img class="imgCard1 imgCardsP3" src="../img/agave.png" alt="dato1">
                 </div> 
@@ -60,7 +60,7 @@
 
 
 
-            <div class="card2P1 cardsP3">
+            <div class="card2P3 cardsP3">
                 <div class="caja-imgCard2 caja-imgCardsP3">
                     <img class="imgCard2 imgCardsP3" src="../img/clematis.png" alt="dato2">
                 </div>
@@ -74,7 +74,7 @@
 
 
 
-            <div class="card3P1 cardsP3">
+            <div class="card3P3 cardsP3">
                 <div class="caja-imgCard3 caja-imgCardsP3">
                     <img class="imgCard3 imgCardsP3" src="../img/crisantemo.png" alt="dato3">
                 </div>
@@ -88,7 +88,7 @@
 
 
 
-            <div class="card4P1 cardsP3">
+            <div class="card4P3 cardsP3">
                 <div class="caja-imgCard4 caja-imgCardsP3">
                     <img class="imgCard4 imgCardsP3" src="../img/hiedra.png" alt="dato4">
                 </div>
@@ -102,7 +102,7 @@
 
 
 
-            <div class="card5P1 cardsP3">
+            <div class="card5P3 cardsP3">
                 <div class="caja-imgCard5 caja-imgCardsP3">
                     <img class="imgCard5 imgCardsP3" src="../img/jazmin.png" alt="dato1">
                 </div>    
@@ -116,7 +116,7 @@
 
 
 
-            <div class="card6P1 cardsP3">
+            <div class="card6P3 cardsP3">
                 <div class="caja-imgCard6 caja-imgCardsP3">
                     <img class="imgCard6 imgCardsP3" src="../img/lavanda.png" alt="dato2">
                 </div>
@@ -130,7 +130,7 @@
 
 
 
-            <div class="card7P1 cardsP3">
+            <div class="card7P3 cardsP3">
                 <div class="caja-imgCard7 caja-imgCardsP3">
                     <img class="imgCard7 imgCardsP3" src="../img/margarita.png" alt="dato3">
                 </div>
@@ -144,7 +144,7 @@
 
 
 
-            <div class="card8P1 cardsP3">
+            <div class="card8P3 cardsP3">
                 <div class="caja-imgCard8 caja-imgCardsP3">
                     <img class="imgCard8 imgCardsP3" src="../img/palmito.png" alt="dato3">
                 </div>
@@ -158,7 +158,7 @@
 
 
 
-            <div class="card9P1 cardsP3">
+            <div class="card9P3 cardsP3">
                 <div class="caja-imgCard9 caja-imgCardsP3">
                     <img class="imgCard9 imgCardsP3" src="../img/rosal.png" alt="dato3">
                 </div>
