--- a/pages/interior.html
+++ b/pages/interior.html
@@ -35,7 +35,7 @@
                         <li><a href="../index.html">inicio</a></li>
                         <li><a href="../pages/interior.html">interior</a></li>
                         <li><a href="../pages/exterior.html">exterior</a></li>
-                        <li><a href="../pages/medicinales.html">aromaticas</a></li>
+                        <li><a href="../pages/aromaticas.html">aromaticas</a></li>
                         <li><a href="../pages/asesoramiento.html">asesoramiento</a></li>
                     </ul>
                 </div>
@@ -46,7 +46,7 @@
         </aside>
         <main>
 
-            <div class="card1P1 cardsP2">
+            <div class="card1P2 cardsP2">
                 <div class="caja-imgCard1 caja-imgCardsP2">
                     <img class="imgCard1 imgCardsP2" src="../img/potus.png" alt="planta potus">
                 </div>    
@@ -60,7 +60,7 @@
 
 
 
-            <div class="card2P1 cardsP2">
+            <div class="card2P2 cardsP2">
                 <div class="caja-imgCard2 caja-imgCardsP2">
                     <img class="imgCard2 imgCardsP2" src="../img/pataDeElefante.png" alt="planta pata de elefante">
                 </div>
@@ -74,7 +74,7 @@
 
 
 
-            <div class="card3P1 cardsP2">
+            <div class="card3P2 cardsP2">
                 <div class="caja-imgCard3 caja-imgCardsP2">
                     <img class="imgCard3 imgCardsP2" src="../img/marantaLeuconera.png" alt="planta maranta leuconeura">
                 </div>
@@ -88,7 +88,7 @@
 
 
 
-            <div class="card4P1 cardsP2">
+            <div class="card4P2 cardsP2">
                 <div class="caja-imgCard4 caja-imgCardsP2">
                     <img class="imgCard4 imgCardsP2" src="../img/helecho.png" alt="planta helecho">
                 </div>
@@ -102,7 +102,7 @@
 
 
 
-            <div class="card5P1 cardsP2">
+            <div class="card5P2 cardsP2">
                 <div class="caja-imgCard5 caja-imgCardsP2">
                     <img class="imgCard5 imgCardsP2" src="../img/ficusLyrata.png" alt="planta ficus lyrata">
                 </div>    
@@ -116,7 +116,7 @@
 
 
 
-            <div class="card6P1 cardsP2">
+            <div class="card6P2 cardsP2">
                 <div class="caja-imgCard6 caja-imgCardsP2">
                     <img class="imgCard6 imgCardsP2" src="../img/cinta.png" alt="planta croton">
                 </div>
@@ -125,14 +125,14 @@
                 </div>
             </div>
             <div class="aa">  
-                <p class="a"></p>
+                <p class="a">También conocida como malamadre o lazo de amor. Esta agradecida planta de porte colgante necesita luz, pero sin exponerla al sol directo. Su riego debe ser más moderado en invierno ,una vez a la semana será suficiente, mientras que en verano hay que incrementarlo y hacerlo 2 o 3 veces semanales. Es una de las plantas de interior más duraderas y perfecta para iniciarse en la jardinería. Además puede reproducirse fácilmente gracias a los hijuelos que salen en alguno de sus tallos.</p>
             </div> 
 
 
 
-            <div class="card7P1 cardsP2">
+            <div class="card7P2 cardsP2">
                 <div class="caja-imgCard7 caja-imgCardsP2">
-                    <img class="imgCard3 imgCardsP2" src="../img/collarDeCorazones.png" alt="planta collar de corazones">
+                    <img class="imgCard7 imgCardsP2" src="../img/collarDeCorazones.png" alt="planta collar de corazones">
                 </div>
                 <div class="caja-textoCard7 caja-textoCardsP2"> 
                     <p class="textoImg">collar de corazones</p>
@@ -144,30 +144,30 @@
 
 
 
-            <div class="card7P1 cardsP2">
-                <div class="caja-imgCard7 caja-imgCardsP2">
-                    <img class="imgCard3 imgCardsP2" src="../img/anturio.png" alt="planta collar de corazones">
+            <div class="card8P2 cardsP2">
+                <div class="caja-imgCard8 caja-imgCardsP2">
+                    <img class="imgCard8 imgCardsP2" src="../img/anturio.png" alt="planta collar de corazones">
                 </div>
-                <div class="caja-textoCard7 caja-textoCardsP2"> 
+                <div class="caja-textoCard8 caja-textoCardsP2"> 
                     <p class="textoImg">anturio</p>
                 </div>
             </div>
             <div class="aa">  
-                <p class="a"></p>
+                <p class="a">El Anthurium es una de las plantas más resistentes. Su flor es muy característica: se trata de una espiga rodeada de una hoja de color intenso en forma de corazón. Aunque su color más habitual es el rojo, también puede encontrarse en blanco, púrpura, naranja y hasta negro. Al ser una planta tropical necesita una temperatura superior a 15º. Para conseguir la humedad adecuada, pulverízala o coloca una bandeja con guijarros con agua. Así las raíces no estarán en contacto con el agua, pero la humedad que produce al evaporarse la beneficiará.</p>
             </div>
 
 
 
-            <div class="card7P1 cardsP2">
-                <div class="caja-imgCard7 caja-imgCardsP2">
-                    <img class="imgCard3 imgCardsP2" src="../img/cactus.png" alt="planta collar de corazones">
+            <div class="card9P2 cardsP2">
+                <div class="caja-imgCard9 caja-imgCardsP2">
+                    <img class="imgCard9 imgCardsP2" src="../img/cactus.png" alt="planta collar de corazones">
                 </div>
-                <div class="caja-textoCard7 caja-textoCardsP2"> 
+                <div class="caja-textoCard9 caja-textoCardsP2"> 
                     <p class="textoImg">cactus</p>
                 </div>
             </div>
             <div class="aa">  
-                <p class="a"></p>
+                <p class="a">Pertenecen a la familia de las suculentas. Son plantas que acumulan agua para adaptarse al hábitat en el que se desarrollan y transformado sus hojas en espinas para protegerse de los animales hervíboros y prevenir la pérdida de agua que se almacena en el tronco. Necesitan varias horas de luz al día, evitar las corrientes de aire y un riego moderado, que dependerá de la estación del año. En invierno hay que reducirlo casi al máximo, en primaver hacerlo cada 10 o 12 días y en verano aumentar la frecuente y hacerlo cada 4 u 8 días (dependiendo de la climatología de tu zona).</p>
             </div>
 
 
